# agent-as-annotators

./: .gitignore  README.md  pyproject.toml  run_exploration.py  run_webarena.py  run_websynth.py  train.py
.github/workflows/: publish.yml
agent_as_annotators/: __init__.py  browser_stealth.py  modeling.py  obs_timeout.py
agent_as_annotators/benchmarks/a3_synth/: __init__.py  env.py  evaluators.py  register.py  study.py
agent_as_annotators/cli/: __init__.py  eval.py  explore.py  synth.py  train.py
agent_as_annotators/configs/a3_synth/: gitlab-1.gemini-3-pro.tasks.json  reddit-0.gemini-3-pro.tasks.json  reddit-1.gemini-3-pro.tasks.json  shopping-0.gemini-3-pro.tasks.json
agent_as_annotators/configs/gemini-3-pro-preview/: exploration-e5b.tasks.json  exploration.sample.json
agent_as_annotators/exploration/: __init__.py  register.py
agent_as_annotators/utils/: synth.py
configs/: model_configs.json
configs/accelerate/: qwen3.5-4b-16k-8gpu.yml  qwen3.5-4b-16k.yml  qwen3.5-9b-16k-2node.yml  qwen3.5-9b.yml
configs/train/: qwen3.5-2b.json  qwen3.5-4b.json  qwen3.5-9b.json
configs/vllm/: Qwen3.5-2B.yaml  Qwen3.5-4B.yaml  Qwen3.5-9B.yaml
llm_annotators/: browser_stealth.py  exp_status.py  obs_timeout.py  results.py
llm_annotators/benchmarks/websynth/: __init__.py  env.py  evaluators.py  register.py  study.py
llm_annotators/configs/websynth/: gitlab-0.gemini-3-pro.tasks.json  map-0.gemini-3-pro.tasks.json  map-1.gemini-3-pro.tasks.json  shopping-1.gemini-3-pro.tasks.json  shopping_admin-0.gemini-3-pro.tasks.json  shopping_admin-1.gemini-3-pro.tasks.json  wikipedia-0.gemini-3-pro.tasks.json  wikipedia-1.gemini-3-pro.tasks.json
llm_annotators/exploration/: __init__.py
llm_annotators/judge/: __init__.py  defaults.py  utils.py
llm_annotators/prompts/: __init__.py
llm_annotators/utils/: __init__.py  screen.py  trajectories.py
scripts/: clean_trajectories.py  convert_trajectories_to_json.py  create_personas.py  create_synth_configs.py  create_websynth_configs.py  generate_rft_data.py  generate_task_intents.py
