[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-as-annotators"
dynamic = ["version"]
description = "Agent-as-Annotators: Structured Distillation of Web Agent Capabilities"
readme = "README.md"
license = {text = "TBD"}
authors = [
    {name = "Xing Han Lu", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["llm", "annotation", "machine-learning", "nlp"]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "agentlab @ git+https://github.com/ServiceNow/AgentLab.git",
    "bitsandbytes>=0.48.2",
    "browsergym-meta @ git+https://github.com/ServiceNow/BrowserGym.git",
    "browsergym-workarena==0.5.3",
    "flash-attn>=2.8.3",
    "google-auth>=2.43.0",
    "langchain>=0.3.27",
    "peft>=0.18.1",
    "qwen-vl-utils>=0.0.14",
    "transformers==4.57.*",
    "trl>=0.25.0",
    "vllm>=0.11.0",
    "gradio>=5,<6",
    "playwright-stealth>=2.0.2",
]

[project.optional-dependencies]
dev = [
    "black>=21.0",
]
docs = [
    # "sphinx>=4.0",
]

[project.urls]
Homepage = "https://github.com/McGill-NLP/agent-as-annotators"
Repository = "https://github.com/McGill-NLP/agent-as-annotators"
"Bug Tracker" = "https://github.com/McGill-NLP/agent-as-annotators/issues"

[project.scripts]
llma-screen-utils = "llm_annotators.utils.screen:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_annotators*"]
exclude = ["tests*"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.dynamic]
version = {attr = "llm_annotators.version.__version__"}

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["llm_annotators"]

[tool.uv]
link-mode = "copy"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=llm_annotators --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.setuptools.package-data]
"llm_annotators" = ["configs/*.json"]
